@@ -1,4 +1,4 @@
-/* $Id: parent.c,v 1.61 2007-03-06 18:01:22 nicm Exp $ */
+/* $Id: parent.c,v 1.62 2007-03-07 00:27:56 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -29,111 +29,88 @@
 #include "deliver.h"
 #include "match.h"
 
+void	parent_get(struct mail *, struct msg *, void *, struct deliver_ctx *,
+	    struct match_ctx *);
+void	parent_done(struct io *, struct mail *, struct msg *, int);
+int	parent_child(struct account *, struct mail *, const char *, uid_t,
+  	    int (*)(struct account *, struct msg *, void *, int *), void *,
+	    int (*)(struct account *, struct msg *, void *, int *), void *,
+	    int *);
+
+struct parent_action_data {
+	struct action		*action;
+	struct deliver_ctx	*dctx;
+	struct mail		*mail;
+};
+
 int	parent_action(struct action *, struct deliver_ctx *, uid_t);
-int	parent_command(struct match_ctx *, struct match_command_data *, uid_t);
+int	parent_action_parenthook(struct account *, struct msg *, void *, int *);
+int	parent_action_childhook(struct account *, struct msg *, void *, int *);
 
-int
-do_parent(struct child *child)
+struct parent_cmd_data {
+	struct match_ctx	 	*mctx;
+	struct match_command_data	*data;
+	struct mail			*mail;
+};
+
+int	parent_cmd(struct match_ctx *, struct match_command_data *, uid_t);
+int	parent_cmd_childhook(struct account *, struct msg *, void *, int *);
+
+void
+parent_get(struct mail *m, struct msg *msg, void *buf, struct deliver_ctx *dctx,
+    struct match_ctx *mctx)
 {
-	struct msg	 	 msg;
-	struct msgdata		*data;
-	struct deliver_ctx	 dctx;
-	struct match_ctx	 mctx;
-	struct mail		 m;
-	int			 error;
-	uid_t			 uid;
-	void			*buf;
-	size_t			 len;
+	mail_receive(m, msg);
+	m->tags = buf;
 
-	memset(&m, 0, sizeof m);
-	data = &msg.data;
-
-	if (privsep_recv(child->io, &msg, &buf, &len) != 0)
-		fatalx("parent: privsep_recv error");
-	log_debug2("parent: got message type %d from child %ld (%s)", msg.type,
-	    (long) child->pid, child->account->name);
-
-	switch (msg.type) {
-	case MSG_ACTION:
-		mail_receive(&m, &msg);
-		if (buf == NULL || len == 0)
-			fatalx("parent: bad tags");
-		m.tags = buf;
-
-		uid = data->uid;
-		memset(&dctx, 0, sizeof dctx);
-		dctx.account = data->account;
-		dctx.mail = &m;
-		dctx.decision = NULL;	/* only altered in child */
-		dctx.pm_valid = &msg.data.pm_valid;
-		memcpy(&dctx.pm, &msg.data.pm, sizeof dctx.pm);
-
-		error = parent_action(data->action, &dctx, uid);
-
-		memset(&msg, 0, sizeof msg);
-		msg.type = MSG_DONE;
-		msg.data.error = error;
-		mail_send(&m, &msg);
-		if (privsep_send(child->io, &msg, m.tags,
-		    STRB_SIZE(m.tags)) != 0)
-			fatalx("parent: privsep_send error");
-
-		mail_close(&m);
-		break;
-	case MSG_COMMAND:
-		mail_receive(&m, &msg);
-		if (buf == NULL || len == 0)
-			fatalx("parent: bad tags");
-		m.tags = buf;
-
-		uid = data->uid;
-		memset(&mctx, 0, sizeof mctx);
-		mctx.account = data->account;
-		mctx.mail = &m;
-		mctx.pm_valid = msg.data.pm_valid;
-		memcpy(&mctx.pm, &msg.data.pm, sizeof mctx.pm);
-
-		error = parent_command(&mctx, data->cmddata, uid);
-
-		memset(&msg, 0, sizeof msg);
-		msg.type = MSG_DONE;
-		msg.data.error = error;
-		if (privsep_send(child->io, &msg, 0, NULL) != 0)
-			fatalx("parent: privsep_send error");
-
-		mail_close(&m);
-		break;
-	case MSG_DONE:
-		fatalx("parent: unexpected message");
-	case MSG_EXIT:
-		return (1);
+	if (dctx != NULL) {
+		memset(dctx, 0, sizeof dctx);
+		dctx->account = msg->data.account;
+		dctx->mail = m;
+		dctx->decision = NULL;	/* only altered in child */
+		dctx->pm_valid = &msg->data.pm_valid;
+		memcpy(&dctx->pm, &msg->data.pm, sizeof dctx->pm);
 	}
 
-	return (0);
+	if (mctx != NULL) { 
+		memset(mctx, 0, sizeof mctx);
+		mctx->account = msg->data.account;
+		mctx->mail = m;
+		mctx->decision = NULL;	/* only altered in child */
+		mctx->pm_valid = msg->data.pm_valid;
+		memcpy(&mctx->pm, &msg->data.pm, sizeof mctx->pm);
+	}
+}
+
+void
+parent_done(struct io *io, struct mail *m, struct msg *msg, int error)
+{
+	memset(msg, 0, sizeof msg);
+
+	msg->type = MSG_DONE;
+	msg->data.error = error;
+
+	mail_send(m, msg);
+
+	if (privsep_send(io, msg, m->tags, STRB_SIZE(m->tags)) != 0)
+		fatalx("parent: privsep_send error");
+	
+	mail_close(m);
 }
 
 int
-parent_action(struct action *t, struct deliver_ctx *dctx, uid_t uid)
+parent_child(struct account *a, struct mail *m, const char *name, uid_t uid,
+    int (*parenthook)(struct account *, struct msg *, void *, int *),
+    void *parentdata, int (*childhook)(struct account *, struct msg *, void *,
+    int *), void *childdata, int *result)
 {
-	struct account		*a = dctx->account;
-	struct mail		*m = dctx->mail;
-	int		 	 status, error, fds[2];
-	pid_t		 	 pid;
-	struct io		*io;
-	struct msg	 	 msg;
-	void			*buf;
-	size_t			 len;
-
-	memset(&dctx->wr_mail, 0, sizeof dctx->wr_mail);
-	/* if writing back, open a new mail now and set its ownership so it
-	   can be accessed by the child */
-	if (t->deliver->type == DELIVER_WRBACK) {
-		mail_open(&dctx->wr_mail, IO_BLOCKSIZE);
-		if (geteuid() == 0 && fchown(dctx->wr_mail.shm.fd,
-		    conf.child_uid, conf.child_gid) != 0)
-			fatal("fchown");
-	}
-
+	struct io	*io;
+	struct msg 	 msg;
+	int		 status, error = 0, fds[2];
+	pid_t		 pid;
+	void		*buf;
+	size_t		 len;
+	
 	if (socketpair(AF_UNIX, SOCK_STREAM, PF_UNSPEC, fds) != 0)
 		fatal("socketpair");
 	pid = child_fork();
@@ -157,25 +134,17 @@ parent_action(struct action *t, struct deliver_ctx *dctx, uid_t uid)
 				fatalx("parent2: unexpected message");
 			}
 		} while (msg.type != MSG_DONE);
-		error = msg.data.error;
+		*result = msg.data.error;
 
 		if (buf == NULL || len == 0)
 			fatalx("parent2: bad tags");
 		strb_destroy(&m->tags);
 		m->tags = buf;
 
-		/* use new mail if necessary */
-		if (t->deliver->type == DELIVER_WRBACK) {
-			if (error == DELIVER_SUCCESS) {
-				mail_close(&dctx->wr_mail);
-
-				mail_receive(m, &msg);
-				log_debug2("%s: got new mail from delivery: "
-				    "size %zu, body %zd", a->name, m->size,
-				    m->body);
-			} else
-				mail_destroy(&dctx->wr_mail);
-		}
+		/* call the hook */
+		if (parenthook != NULL &&
+		    parenthook(a, &msg, parentdata, result) != 0)
+			error = 1;
 
 		/* free the io */
 		io_close(io);
@@ -186,16 +155,16 @@ parent_action(struct action *t, struct deliver_ctx *dctx, uid_t uid)
 		if (WIFSIGNALED(status)) {
 			log_warnx("%s: child got signal: %d", a->name,
 			    WTERMSIG(status));
-			return (DELIVER_FAILURE);
+			return (1);
 		}
 		if (!WIFEXITED(status)) {
 			log_warnx("%s: child didn't exit normally", a->name);
-			return (DELIVER_FAILURE);
+			return (1);
 		}
 		status = WEXITSTATUS(status);
 		if (status != 0) {
 			log_warnx("%s: child returned %d", a->name, status);
-			return (DELIVER_FAILURE);
+			return (1);
 		}
 
 		return (error);
@@ -211,18 +180,17 @@ parent_action(struct action *t, struct deliver_ctx *dctx, uid_t uid)
 	io = io_create(fds[1], NULL, IO_LF, INFTIM);
 
 	/* child process. change user and group */
-	log_debug("%s: trying to deliver using uid %lu", a->name, (u_long) uid);
 	if (geteuid() == 0) {
 		if (dropto(uid) != 0) {
 			log_warnx("%s: can't drop privileges", a->name);
-			child_exit(DELIVER_FAILURE);
+			child_exit(1);
 		}
 	} else {
 		log_debug("%s: not root. using current user", a->name);
 		uid = geteuid();
 	}
 #ifndef NO_SETPROCTITLE
-	setproctitle("deliver[%lu]", (u_long) uid);
+	setproctitle("%s[%lu]", name, (u_long) uid);
 #endif
 
 	/* refresh user and home and fix tags */
@@ -231,17 +199,13 @@ parent_action(struct action *t, struct deliver_ctx *dctx, uid_t uid)
 	log_debug2("%s: user is: %s, home is: %s", a->name, conf.info.user,
 	    conf.info.home);
 
-	/* do the delivery */
-	error = t->deliver->deliver(dctx, t);
-	if (t->deliver->type == DELIVER_WRBACK && error == DELIVER_SUCCESS) {
-		log_debug2("%s: using new mail, size %zu", a->name,
-		    dctx->wr_mail.size);
-		mail_send(&dctx->wr_mail, &msg);
-	}
+	/* call the hook */
+	if (childhook(a, &msg, childdata, result) != 0)
+		error = 1;
 
 	/* inform parent we're done */
 	msg.type = MSG_DONE;
-	msg.data.error = error;
+	msg.data.error = *result;
 	if (privsep_send(io, &msg, m->tags, STRB_SIZE(m->tags)) != 0)
 		fatalx("deliver: privsep_send error");
 
@@ -254,79 +218,172 @@ parent_action(struct action *t, struct deliver_ctx *dctx, uid_t uid)
 	xmalloc_report(a->name);
 #endif
 
-	child_exit(0);
-	return (DELIVER_FAILURE);
+	child_exit(error);
+	fatalx("child_exit: failed");
 }
 
 int
-parent_command(struct match_ctx *mctx, struct match_command_data *data,
-    uid_t uid)
+do_parent(struct child *child)
 {
-	struct account	*a = mctx->account;
-	struct mail	*m = mctx->mail;
-	int		 status, found, flags;
-	pid_t		 pid;
-	char		*s, *cause, *out, *err;
-	struct cmd	*cmd;
-	char		*lbuf;
-	size_t		 llen;
+	struct msg	 	 msg;
+	struct deliver_ctx	 dctx;
+	struct match_ctx	 mctx;
+	struct mail		 m;
+	int			 error;
+	void			*buf;
+	size_t			 len;
 
-	pid = child_fork();
-	if (pid != 0) {
- 		/* parent process. wait for child */
-		log_debug2("%s: forked. child pid is %ld", a->name, (long) pid);
+	memset(&m, 0, sizeof m);
 
-		if (waitpid(pid, &status, 0) == -1)
-			fatal("waitpid");
-		if (WIFSIGNALED(status)) {
-			log_warnx("%s: child got signal: %d", a->name,
-			    WTERMSIG(status));
-			return (MATCH_ERROR);
-		}
-		if (!WIFEXITED(status)) {
-			log_warnx("%s: child didn't exit normally", a->name);
-			return (MATCH_ERROR);
-		}
-		status = WEXITSTATUS(status);
-		switch (status) {
-		case MATCH_FALSE:
-		case MATCH_TRUE:
-		case MATCH_ERROR:
-			return (status);
-		default:
-			return (MATCH_ERROR);
-		}
+	if (privsep_recv(child->io, &msg, &buf, &len) != 0)
+		fatalx("parent: privsep_recv error");
+	log_debug2("parent: got message type %d from child %ld (%s)", msg.type,
+	    (long) child->pid, child->account->name);
+
+	switch (msg.type) {
+	case MSG_ACTION:
+		if (buf == NULL || len == 0)
+			fatalx("parent: bad tags");
+		parent_get(&m, &msg, buf, &dctx, NULL);
+		error = parent_action(msg.data.action, &dctx, msg.data.uid);
+		parent_done(child->io, &m, &msg, error);
+		break;
+	case MSG_COMMAND:
+		if (buf == NULL || len == 0)
+			fatalx("parent: bad tags");
+		parent_get(&m, &msg, buf, NULL, &mctx);
+		error = parent_cmd(&mctx, msg.data.cmddata, msg.data.uid);
+		parent_done(child->io, &m, &msg, error);
+		break;
+	case MSG_DONE:
+		fatalx("parent: unexpected message");
+	case MSG_EXIT:
+		return (1);
 	}
 
-	/* child process. change user and group */
-	log_debug("%s: trying to run command \"%s\" as uid %lu", a->name,
-	    data->cmd, (u_long) uid);
-	if (geteuid() == 0) {
-		if (dropto(uid) != 0) {
-			log_warnx("%s: can't drop privileges", a->name);
-			child_exit(MATCH_ERROR);
-		}
-	} else
-		log_debug("%s: not root. using current user", a->name);
-#ifndef NO_SETPROCTITLE
-	setproctitle("command[%lu]", (u_long) uid);
-#endif
+	return (0);
+}
 
-	/* refresh user and home and fix tags */
-	fill_info(NULL);
-	update_tags(&m->tags);
-	log_debug2("%s: user is: %s, home is: %s", a->name, conf.info.user,
-	    conf.info.home);
+int
+parent_action(struct action *t, struct deliver_ctx *dctx, uid_t uid)
+{
+	struct account			*a = dctx->account;
+	struct mail			*m = dctx->mail; 
+	struct mail			*md = &dctx->wr_mail;
+	struct parent_action_data	 ad;
+	int				 result;
+
+	ad.action = t;
+	ad.dctx = dctx;
+	ad.mail = m;
+
+	memset(md, 0, sizeof *md);
+	/*
+	 * If writing back, open a new mail now and set its ownership so it
+	 *  can be accessed by the child.
+	 */
+	if (t->deliver->type == DELIVER_WRBACK) {
+		mail_open(md, IO_BLOCKSIZE);
+		if (geteuid() == 0 &&
+		    fchown(md->shm.fd, conf.child_uid, conf.child_gid) != 0)
+			fatal("fchown");
+	}
+	
+	if (parent_child(a, m, "deliver", uid, parent_action_parenthook, &ad,
+	    parent_action_childhook, &ad, &result) != 0)
+		return (DELIVER_FAILURE);
+	return (result);
+}
+
+int
+parent_action_parenthook(struct account *a, struct msg *msg, void *hookdata,
+    int *result)
+{
+	struct parent_action_data	*ad = hookdata;
+	struct action			*t = ad->action;
+	struct deliver_ctx		*dctx = ad->dctx;
+	struct mail			*m = ad->mail;
+	struct mail			*md = &dctx->wr_mail;
+
+	/* use new mail if necessary */
+	if (t->deliver->type != DELIVER_WRBACK)
+		return (0);
+
+	if (*result != DELIVER_SUCCESS) {
+		mail_destroy(md);
+		return (0);
+	}
+
+	mail_close(md);
+	mail_receive(m, msg);
+	log_debug2("%s: got new mail from delivery: size %zu, body %zd",
+	    a->name, m->size, m->body);
+
+	return (0);
+}
+
+int
+parent_action_childhook(struct account *a, struct msg *msg, void *hookdata,
+    int *result)
+{
+	struct parent_action_data	*ad = hookdata;
+	struct action			*t = ad->action;
+	struct deliver_ctx		*dctx = ad->dctx;
+	struct mail			*md = &dctx->wr_mail;
+
+	/* do the delivery */
+	*result = t->deliver->deliver(dctx, t);
+	if (t->deliver->type != DELIVER_WRBACK || *result != DELIVER_SUCCESS)
+		return (0);
+
+	mail_send(md, msg);
+	log_debug2("%s: using new mail, size %zu", a->name, md->size);
+
+	return (0);
+}
+
+int
+parent_cmd(struct match_ctx *mctx, struct match_command_data *data,
+    uid_t uid)
+{
+	struct account		*a = mctx->account;
+	struct mail		*m = mctx->mail;
+	struct parent_cmd_data	 cd;
+	int			 result;
+
+	cd.mctx = mctx;
+	cd.data = data;
+
+	if (parent_child(a, m, "command", uid, NULL, NULL,
+	    parent_cmd_childhook, &cd, &result) != 0)
+		return (MATCH_ERROR);
+	return (result);
+}
+
+int
+parent_cmd_childhook(struct account *a, unused struct msg *msg, void *hookdata,
+    int *result)
+{
+	struct parent_cmd_data		*cd = hookdata;
+	struct match_ctx		*mctx = cd->mctx;
+	struct mail			*m = mctx->mail;
+	struct match_command_data	*data = cd->data;
+	int				 flags, status, found = 0;
+	char				*s, *cause, *lbuf, *out, *err, tag[24];
+	size_t				 llen;
+	struct cmd		 	*cmd = NULL;
+	regmatch_t			 pm[NPMATCH];
+	u_int				 i;
 
 	/* sort out the command */
 	s = replace(data->cmd, m->tags, m, mctx->pm_valid, mctx->pm);
         if (s == NULL || *s == '\0') {
 		log_warnx("%s: empty command", a->name);
-		child_exit(MATCH_ERROR);
+		goto error;
         }
 
-	log_debug2("%s: %s: started (ret=%d re=%s)", a->name, s, data->ret,
-	    data->re.str == NULL ? "none" : data->re.str);
+	log_debug2("%s: %s: started (ret=%d re=%s)", a->name, 
+	    s, data->ret, data->re.str == NULL ? "none" : data->re.str);
 	flags = CMD_ONCE;
 	if (data->pipe)
 		flags |= CMD_IN;
@@ -335,55 +392,71 @@ parent_command(struct match_ctx *mctx, struct match_command_data *data,
 	cmd = cmd_start(s, flags, m->data, m->size, &cause);
 	if (cmd == NULL) {
 		log_warnx("%s: %s: %s", a->name, s, cause);
-		xfree(cause);
-		xfree(s);
-		child_exit(MATCH_ERROR);
+		goto error;
 	}
 
 	llen = IO_LINESIZE;
 	lbuf = xmalloc(llen);
 
-	found = 0;
 	do {
 		status = cmd_poll(cmd, &out, &err, &lbuf, &llen, &cause);
 		if (status > 0) {
 			log_warnx("%s: %s: %s", a->name, s, cause);
-			xfree(cause);
-			cmd_free(cmd);
-			xfree(s);
-			xfree(lbuf);
-			child_exit(MATCH_ERROR);
+			goto error;
 		}
-       		if (status == 0) {
-			if (err != NULL)
-				log_warnx("%s: %s: %s", a->name, s, err);
-			if (out != NULL) {
-				log_debug3("%s: %s: out: %s", a->name, s, out);
-
-				found = re_simple(&data->re, out, &cause);
-				if (found == -1) {
-					log_warnx("%s: %s", a->name, cause);
-					cmd_free(cmd);
-					xfree(s);
-					xfree(lbuf);
-					child_exit(MATCH_ERROR);
-				};
-			}
+       		if (status < 0)
+			break;
+		if (err != NULL)
+			log_warnx("%s: %s: %s", a->name, s, err);
+		if (out == NULL || found)
+			continue;
+		log_debug3("%s: %s: out: %s", a->name, s, out);
+			
+		found = re_execute(&data->re, out, NPMATCH, pm, 0, &cause);
+		if (found == -1) {
+			log_warnx("%s: %s", a->name, cause);
+			goto error;
+		}
+		if (found != 1)
+			continue;
+		/* save the pmatch */
+		for (i = 0; i < NPMATCH; i++) {
+			if (pm[i].rm_so >= pm[i].rm_eo)
+				continue;
+			xsnprintf(tag, sizeof tag, "command%u", i);
+			add_tag(&m->tags, tag, "%.*s", (int) (pm[i].rm_eo -
+			    pm[i].rm_so), out + pm[i].rm_so);
 		}
 	} while (status >= 0);
 	status = -1 - status;
 
 	log_debug2("%s: %s: returned %d, found %d", a->name, s, status, found);
+
 	cmd_free(cmd);
 	xfree(s);
 	xfree(lbuf);
 
 	status = data->ret == status;
 	if (data->ret != -1 && data->re.str != NULL)
-		child_exit((found && status) ? MATCH_TRUE : MATCH_FALSE);
+		*result = (found && status) ? MATCH_TRUE : MATCH_FALSE;
 	else if (data->ret != -1 && data->re.str == NULL)
-		child_exit(status ? MATCH_TRUE : MATCH_FALSE);
+		*result = status ? MATCH_TRUE : MATCH_FALSE;
 	else if (data->ret == -1 && data->re.str != NULL)
-		child_exit(found ? MATCH_TRUE : MATCH_FALSE);
-	return (MATCH_ERROR);
+		*result = found ? MATCH_TRUE : MATCH_FALSE;
+	else
+		*result = MATCH_ERROR;
+
+	return (0);
+
+error:
+	if (cause != NULL)
+		xfree(cause);
+	if (cmd != NULL)
+		cmd_free(cmd);
+	if (s != NULL)
+		xfree(s);
+	if (lbuf != NULL)
+		xfree(lbuf);
+
+	return (1);
 }
