@@ -1,5 +1,6 @@
 06 March 2007
 
+* Submatches with commands are now added as tags command0 to command9.
 * pipe actions now use the command.c framework, which means their stderr is
   logged and stdout discarded.
 * mail_file tag added by maildir delivery and mbox_file by mbox. Also pass the
@@ -99,4 +100,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.29 2007-03-06 13:23:47 nicm Exp $
+$Id: CHANGES,v 1.30 2007-03-07 00:27:56 nicm Exp $
